# P.A.G.A

./: .gitignore  Cargo.toml  Makefile  RFC01.md  RFC03.md
artifacts/: checksums.txt  checksums_intermediate.txt  electors.wasm  paga.wasm  politicians.wasm
contracts/electors/: Cargo.toml
contracts/electors/src/: errors.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/paga/: Cargo.toml
contracts/paga/src/: Untitled-1.dockerfile  errors.rs  execute.rs  execute_electors.rs  execute_politicians.rs  lib.rs  msg.rs  notes.txt  state.rs  utils.rs
contracts/politicians/: Cargo.toml
contracts/politicians/src/: execute.rs  lib.rs  msg.rs  query.rs  state.rs
schema/: execute_msg.json
scripts/: commands.ts  deploy.ts  package-lock.json  utils.ts
scripts/commands/: commands.ts  compile_command.ts  contract.ts
